# Cursuri-Facultate

./: README.md
1/ASC/: README.md  tema_1.s  tema_2.s
1/LFA/: README.md
1/LFA/Tema_1/DFA/: CMakeLists.txt  main.cpp
1/LFA/Tema_1/NFA/: NFA.cbp  NFA.depend  NFA.layout  main.cpp  nfa.txt
1/LFA/Tema_2/DFA-to-Regex/: CMakeLists.txt  main.cpp
1/LFA/Tema_2/Minimizare-DFA/: CMakeLists.txt  main.cpp
1/LFA/Tema_3/CFG/: main.py
1/POO/: README.md
1/POO/Tema-1-POO/: README.md  date.in  main.cpp  numar_intreg_mare.cpp  numar_intreg_mare.h  numar_rational_mare.cpp  numar_rational_mare.h
1/POO/Tema-2-POO/: Matrice_oarecare.cpp  Matrice_oarecare.h  Matrice_patratica.cpp  Matrice_patratica.h  Matricea.cpp  Matricea.h  README.md  Vectorul.cpp  Vectorul.h  date.in  main.cpp
1/POO/Tema-3-POO/: Animal.cpp  Animal.h  AtlaZoologic.cpp  AtlaZoologic.h  CMakeLists.txt  Exceptie.cpp  Exceptie.h  Mamifere.cpp  Mamifere.h  Pasari.cpp  Pasari.h  Pesti.cpp  Pesti.h  Reptile.cpp  Reptile.h  main.cpp  nevertebrate.cpp  nevertebrate.h  vertebrate.cpp  vertebrate.h
1/SD/: README.md
1/SD/Tema_4/: Arbore_binar.cbp  Arbore_binar.depend  main.cpp
1/SD/Tema_5/: main.cpp  tema5.cbp  tema5.depend  tema5.layout
1/TW/: aparitie.js  contact.html  deseneaza.html  idle.js  index.html  layout.css  script.js  trbnoua.css  trbnoua2.css  ttt.js  xsio.html
1/TW/Server/: index.js  package-lock.json  package.json
2/DAW/: README.md
2/DAW/Proiect/: index.html
2/PF/: README.md
2/PF/Laboratoare/: lab1.hs
2/PF/Teme/: tema2.hs
2/PS/CRV-P/: README.md  documentatie.txt
(+42 files in other folders)
